ingress-demo/ingress-resource-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
  namespace: test-lab
spec:
  ingressClassName: nginx
  rules:
  - host: homelabs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  # - host: longhorn.homelab.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: longhorn-frontend 
  #           port:
  #            number: 80
  # - host: green.nginx.example.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: nginx-deploy-green
  #           port:
  #             number: 80
