ingress-demo/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: cattle-monitoring-system
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.homelabs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
